--- a/styles/sass/partials/_general.scss
+++ b/styles/sass/partials/_general.scss
@@ -1,4 +1,4 @@
-/* general styling */
+/////* general styling */////
 html {
     font-size: 62.5%;
     font-family: 'Lato', sans-serif;
@@ -8,8 +8,7 @@ html {
     color: #0D0D0D;
     background-color: #f7f7f7;
     scroll-behavior: smooth;
-
-
+    
     h1,
     h2,
     h3, 
