--- a/styles/sass/partials/_main.scss
+++ b/styles/sass/partials/_main.scss
@@ -1,4 +1,5 @@
 main {
+     ///// general button styling /////
     button {
         padding: 0;
 
@@ -17,8 +18,8 @@ main {
             background: $black;
         }
 
-
-        a:active {
+        a:active,
+        a:after {
         border-radius: 0px;
         background: #feffff;
         box-shadow: inset 2px 2px 10px #666666, 
@@ -26,18 +27,20 @@ main {
         }
     }  
 
-
+     ///// main headings /////
     h2 {
         font-size: 3.0rem;
         position: relative;
         display: inline-block;
     }
 
+    ///// main heading underline styling /////
     h2::after {
         position: absolute;
-        content: '';
-        background: $greenStyle;
-        height: 3px;
+        content: "";
+        background: rgba(180, 198, 190, 0.50);
+        height: 5px;
+        border-radius: 5px;
         margin: 0 auto;
         left: 0;
         right: 0;
@@ -45,7 +48,7 @@ main {
         width: 100%;
     }
 
-/////* bio */////
+/////* bio/about section */////
     .bio {
         background-color: $greenBackground;
         padding: 100px 0;
@@ -59,7 +62,7 @@ main {
         justify-content: space-between;
 
         img {
-            width: 100%;
+            width: 80%;
             object-fit: contain;
             margin-top: -225px;
         }
@@ -87,7 +90,7 @@ main {
 
     .skillsList {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         flex-wrap: wrap;
         width: 60%;
@@ -113,7 +116,7 @@ main {
     }
 
     .projects {
-
+        overflow: hidden;
         h2 {    
             margin-bottom: 100px;
         }
@@ -126,7 +129,7 @@ main {
             padding: 50px 0;
         }
         
-        ///// green background /////
+        ///// green background and shadowing /////
         .project1,
         .project3 {
             margin-left: 10%;
@@ -143,12 +146,20 @@ main {
         .project1 .projectImg,
         .project3 .projectImg {
             margin-right: -50px;
+            
+            img {
+                box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.47);
+            }
         }
 
         .project2 .projectImg {
             margin-left: -50px;
+                img {
+                    box-shadow: -10px 10px 5px 0px rgba(0,0,0,0.47);
+                }
         }
 
+        ///// button positioning /////
         .project1 button,
         .project3 button {
             margin-right: 10px;
@@ -158,7 +169,7 @@ main {
             margin-left: 10px;
         }
 
-
+        ///// project sections /////
         .projectContainer {
             display: flex;
             justify-content: space-between;
