--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -1,8 +1,3 @@
-/* Color Theme Swatches in Hex */
-/* .Color-Theme-2-1-hex { color: #0D0D0D; } black
-.Color-Theme-2-3-hex { color: #f3f7f5; } green
-.Color-Theme-2-4-hex { color: #C1C2C6; } font */
-
-$greenBackground: #e2e9e6d6;
-$black: #0D0D0D;
-$greenStyle: #b4c6be;
+$greenBackground: #e2e9e6d6; //green background
+$black: #0D0D0D; //font
+$greenStyle: #b4c6be; //darker green styling
