--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-/* Color Theme Swatches in Hex */
-/* .Color-Theme-2-1-hex { color: #0D0D0D; } black
-.Color-Theme-2-3-hex { color: #f3f7f5; } green
-.Color-Theme-2-4-hex { color: #C1C2C6; } font */
 html {
   line-height: 1.15;
   -ms-text-size-adjust: 100%;
@@ -239,7 +235,6 @@ html {
   overflow: hidden;
 }
 
-/* general styling */
 html {
   font-size: 62.5%;
   font-family: 'Lato', sans-serif;
@@ -399,6 +394,7 @@ header .hero {
           justify-content: center;
   line-height: 30px;
   height: 100%;
+  text-align: center;
 }
 
 header .hero h1 {
@@ -413,6 +409,49 @@ header .hero h1 span {
 header .hero h2 {
   font-size: 3.0rem;
   letter-spacing: 5px;
+  position: relative;
+}
+
+@-webkit-keyframes underline {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes underline {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+header .hero h2::after {
+  position: absolute;
+  content: '';
+  background: rgba(180, 198, 190, 0.5);
+  border-radius: 4px;
+  height: 4px;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  top: 40px;
+  -webkit-animation: underline;
+          animation: underline;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-transition: all 10s ease-in;
+  transition: all 10s ease-in;
 }
 
 footer {
@@ -440,7 +479,8 @@ main button a:hover {
   background: #0D0D0D;
 }
 
-main button a:active {
+main button a:active,
+main button a:after {
   border-radius: 0px;
   background: #feffff;
   -webkit-box-shadow: inset 2px 2px 10px #666666,  inset -2px -2px 5px #ffffff;
@@ -455,9 +495,10 @@ main h2 {
 
 main h2::after {
   position: absolute;
-  content: '';
-  background: #b4c6be;
-  height: 3px;
+  content: "";
+  background: rgba(180, 198, 190, 0.5);
+  height: 5px;
+  border-radius: 5px;
   margin: 0 auto;
   left: 0;
   right: 0;
@@ -488,7 +529,7 @@ main .bioContainer {
 }
 
 main .bioContainer img {
-  width: 100%;
+  width: 80%;
   -o-object-fit: contain;
      object-fit: contain;
   margin-top: -225px;
@@ -521,9 +562,8 @@ main .skillsList {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -557,6 +597,10 @@ main h3 {
   font-size: 2.5rem;
 }
 
+main .projects {
+  overflow: hidden;
+}
+
 main .projects h2 {
   margin-bottom: 100px;
 }
@@ -588,8 +632,19 @@ main .projects .project3 .projectImg {
   margin-right: -50px;
 }
 
+main .projects .project1 .projectImg img,
+main .projects .project3 .projectImg img {
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.47);
+          box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.47);
+}
+
 main .projects .project2 .projectImg {
   margin-left: -50px;
+}
+
+main .projects .project2 .projectImg img {
+  -webkit-box-shadow: -10px 10px 5px 0px rgba(0, 0, 0, 0.47);
+          box-shadow: -10px 10px 5px 0px rgba(0, 0, 0, 0.47);
 }
 
 main .projects .project1 button,
@@ -749,7 +804,17 @@ main .contact .contactList i:hover {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+  main .skills .skillsContainer h2 {
+    width: 75px;
+  }
   main .skills .skillsList {
+    width: 100%;
+  }
+  main .bioContainer img {
+    margin-top: -175px;
+    width: 100%;
+  }
+  main .bioContainer p {
     width: 100%;
   }
   main .contact {
@@ -764,5 +829,11 @@ main .contact .contactList i:hover {
   }
   main .contact .contactList {
     margin-top: 25%;
+  }
+}
+
+@media (max-width: 500px) {
+  .skills .skillsList li {
+    width: calc(100%/3);
   }
 }
