--- a/styles/sass/partials/_main.scss
+++ b/styles/sass/partials/_main.scss
@@ -1,245 +1,240 @@
 main {
-     ///// general button styling /////
-    button {
-        padding: 0;
+  ///// general button styling /////
+  button {
+    padding: 0;
 
-        a {
-            border: 2px solid $black;
-            font-size: 1.8rem;
-            padding: 5px;
+    a {
+      border: 2px solid $black;
+      font-size: 1.8rem;
+      padding: 5px;
 
-            border-radius: 0px;
-            background: linear-gradient(145deg, #ffffff, #e5e6e6);
-            box-shadow:  1px 1px 10px #666666, 
-                        -1px -1px 5px #ffffff;
-        }
+      border-radius: 0px;
+      background: linear-gradient(145deg, #ffffff, #e5e6e6);
+      box-shadow: 1px 1px 10px #666666, -1px -1px 5px #ffffff;
+    }
 
-        a:hover {
-            background: $black;
-        }
+    a:hover {
+      background: $black;
+    }
 
-        a:active,
-        a:after {
-        border-radius: 0px;
-        background: #feffff;
-        box-shadow: inset 2px 2px 10px #666666, 
-                    inset -2px -2px 5px #ffffff;
-        }
-    }  
+    a:active,
+    a:after {
+      border-radius: 0px;
+      background: #feffff;
+      box-shadow: inset 2px 2px 10px #666666, inset -2px -2px 5px #ffffff;
+    }
+  }
 
-     ///// main headings /////
+  ///// main headings /////
+  h2 {
+    font-size: 3rem;
+    position: relative;
+    display: inline-block;
+  }
+
+  ///// main heading underline styling /////
+  h2::after {
+    position: absolute;
+    content: "";
+    background: rgba(180, 198, 190, 0.5);
+    height: 5px;
+    border-radius: 5px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 30px;
+    width: 100%;
+  }
+
+  /////* bio/about section */////
+  .bio {
+    background-color: $greenBackground;
+    padding: 100px 0;
+    width: 100%;
+  }
+
+  .bioContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    img {
+      width: 80%;
+      object-fit: contain;
+      margin-top: -225px;
+    }
+
     h2 {
-        font-size: 3.0rem;
-        position: relative;
-        display: inline-block;
+      margin-top: 50px;
     }
 
-    ///// main heading underline styling /////
-    h2::after {
-        position: absolute;
-        content: "";
-        background: rgba(180, 198, 190, 0.50);
-        height: 5px;
-        border-radius: 5px;
-        margin: 0 auto;
-        left: 0;
-        right: 0;
-        top: 30px;
-        width: 100%;
+    p {
+      width: 70%;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+  }
+
+  /////* skills */////
+  .skills {
+    padding: 100px 0;
+  }
+
+  .skillsContainer {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .skillsList {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 60%;
+    text-align: center;
+
+    li {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+      width: calc(100% / 4);
     }
 
-/////* bio/about section */////
-    .bio {
-        background-color: $greenBackground;
-        padding: 100px 0;
-        width: 100%;
+    i {
+      font-size: 5.5rem;
+      color: $black;
+    }
+  }
+
+  /////* projects */////
+  h3 {
+    font-size: 2.5rem;
+  }
+
+  .projects {
+    overflow: hidden;
+    h2 {
+      margin-bottom: 100px;
     }
 
-    .bioContainer {
+    .project1,
+    .project2,
+    .project3,
+    .project4 {
+      background-color: $greenBackground;
+      margin-bottom: 200px;
+      padding: 50px 0;
+    }
+
+    ///// green background and shadowing /////
+    .project1,
+    .project3 {
+      margin-left: 10%;
+      box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.47);
+      text-align: justify;
+    }
+
+    .project2,
+    .project4 {
+      margin-right: 10%;
+      text-align: justify;
+      box-shadow: -10px 10px 5px 0px rgba(0, 0, 0, 0.47);
+    }
+
+    ///// image offset /////
+    .project1 .projectImg,
+    .project3 .projectImg {
+      margin-right: -50px;
+
+      img {
+        box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.47);
+      }
+    }
+
+    .project2 .projectImg,
+    .project4 .projectImg {
+      margin-left: -50px;
+      img {
+        box-shadow: -10px 10px 5px 0px rgba(0, 0, 0, 0.47);
+      }
+    }
+
+    .githubButton {
+      margin-left: 10px;
+    }
+
+    ///// project sections /////
+    .projectContainer {
+      display: flex;
+      justify-content: space-between;
+      width: 80%;
+
+      .projectInfo {
+        width: 40%;
+      }
+
+      .projectImg {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 60%;
+
+        img {
+          width: 100%;
+          margin-top: -120px;
+        }
+
+        .projectLink {
+          margin-top: 40px;
+        }
+      }
+    }
+  }
+
+  /////* contact */////
+  .contact {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding-bottom: 100px;
+
+    h2 {
+      margin-top: 0;
+    }
+
+    .contactContainer {
+      width: 50%;
+
+      .email {
+        text-decoration: underline;
+      }
+    }
+
+    .contactList {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      width: 60%;
+
+      li {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-between;
+        padding-bottom: 50px;
+        width: 50%;
+      }
 
-        img {
-            width: 80%;
-            object-fit: contain;
-            margin-top: -225px;
-        }
+      i {
+        color: $black;
+        font-size: 4rem;
+      }
 
-        h2 {
-            margin-top: 50px;  
-        }
-
-        p {
-            width: 70%;
-            text-align: center;
-            margin-bottom: 20px; 
-        }
+      i:hover {
+        color: $greenStyle;
+      }
     }
-
-/////* skills */////
-    .skills {
-        padding: 100px 0;
-    }
-
-    .skillsContainer {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .skillsList {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        flex-wrap: wrap;
-        width: 60%;
-        text-align: center;
-
-        li {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
-            width: calc(100%/4);
-        }
-
-        i {
-            font-size: 5.5rem;
-            color: $black; 
-        }
-    }
-
-/////* projects */////
-    h3 {
-        font-size: 2.5rem;
-    }
-
-    .projects {
-        overflow: hidden;
-        h2 {    
-            margin-bottom: 100px;
-        }
-
-        .project1,
-        .project2,
-        .project3 {
-            background-color: $greenBackground;
-            margin-bottom: 200px;
-            padding: 50px 0;
-        }
-        
-        ///// green background and shadowing /////
-        .project1,
-        .project3 {
-            margin-left: 10%;
-            box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.47);
-        }
-        
-        .project2 {
-            margin-right: 10%;
-            text-align: right;
-            box-shadow: -10px 10px 5px 0px rgba(0,0,0,0.47);
-        }
-
-        ///// image offset /////
-        .project1 .projectImg,
-        .project3 .projectImg {
-            margin-right: -50px;
-            
-            img {
-                box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.47);
-            }
-        }
-
-        .project2 .projectImg {
-            margin-left: -50px;
-                img {
-                    box-shadow: -10px 10px 5px 0px rgba(0,0,0,0.47);
-                }
-        }
-
-        ///// button positioning /////
-        .project1 button,
-        .project3 button {
-            margin-right: 10px;
-        }
-        
-        .project2 button {
-            margin-left: 10px;
-        }
-
-        ///// project sections /////
-        .projectContainer {
-            display: flex;
-            justify-content: space-between;
-            width: 80%;
-            
-            .projectInfo {
-                width: 40%;
-            }
-
-            .projectImg {
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                width: 60%;
-
-                img {
-                    width: 100%;
-                    margin-top: -120px;
-                }
-
-                .projectLink {
-                    margin-top: 40px;
-                }
-            }
-        }
-    }  
-
-/////* contact */////
-    .contact {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        padding-bottom: 100px;
-
-        h2 {
-            margin-top: 0;
-        }
-        
-        .contactContainer {
-            width: 50%;
-
-            .email {
-                text-decoration: underline;
-            }
-        }
-
-        .contactList {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            flex-wrap: wrap;
-            width: 60%;
-
-            li{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                padding-bottom: 50px;
-                width: 50%;
-            }
-
-            i {
-                color: $black;
-                font-size: 4.0rem; 
-            }
-
-            i:hover {
-                color: $greenStyle;
-            }
-        }
-    }
+  }
 }
-
