--- a/styles/style.css
+++ b/styles/style.css
@@ -469,8 +469,8 @@ main button a {
   padding: 5px;
   border-radius: 0px;
   background: linear-gradient(145deg, #ffffff, #e5e6e6);
-  -webkit-box-shadow: 1px 1px 10px #666666,  -1px -1px 5px #ffffff;
-          box-shadow: 1px 1px 10px #666666,  -1px -1px 5px #ffffff;
+  -webkit-box-shadow: 1px 1px 10px #666666, -1px -1px 5px #ffffff;
+          box-shadow: 1px 1px 10px #666666, -1px -1px 5px #ffffff;
 }
 
 main button a:hover {
@@ -481,12 +481,12 @@ main button a:active,
 main button a:after {
   border-radius: 0px;
   background: #feffff;
-  -webkit-box-shadow: inset 2px 2px 10px #666666,  inset -2px -2px 5px #ffffff;
-          box-shadow: inset 2px 2px 10px #666666,  inset -2px -2px 5px #ffffff;
+  -webkit-box-shadow: inset 2px 2px 10px #666666, inset -2px -2px 5px #ffffff;
+          box-shadow: inset 2px 2px 10px #666666, inset -2px -2px 5px #ffffff;
 }
 
 main h2 {
-  font-size: 3.0rem;
+  font-size: 3rem;
   position: relative;
   display: inline-block;
 }
@@ -583,7 +583,7 @@ main .skillsList li {
       -ms-flex-align: center;
           align-items: center;
   padding: 20px;
-  width: calc(100%/4);
+  width: calc(100% / 4);
 }
 
 main .skillsList i {
@@ -605,7 +605,8 @@ main .projects h2 {
 
 main .projects .project1,
 main .projects .project2,
-main .projects .project3 {
+main .projects .project3,
+main .projects .project4 {
   background-color: #e2e9e6d6;
   margin-bottom: 200px;
   padding: 50px 0;
@@ -616,11 +617,13 @@ main .projects .project3 {
   margin-left: 10%;
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.47);
           box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.47);
+  text-align: justify;
 }
 
-main .projects .project2 {
+main .projects .project2,
+main .projects .project4 {
   margin-right: 10%;
-  text-align: right;
+  text-align: justify;
   -webkit-box-shadow: -10px 10px 5px 0px rgba(0, 0, 0, 0.47);
           box-shadow: -10px 10px 5px 0px rgba(0, 0, 0, 0.47);
 }
@@ -636,21 +639,18 @@ main .projects .project3 .projectImg img {
           box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.47);
 }
 
-main .projects .project2 .projectImg {
+main .projects .project2 .projectImg,
+main .projects .project4 .projectImg {
   margin-left: -50px;
 }
 
-main .projects .project2 .projectImg img {
+main .projects .project2 .projectImg img,
+main .projects .project4 .projectImg img {
   -webkit-box-shadow: -10px 10px 5px 0px rgba(0, 0, 0, 0.47);
           box-shadow: -10px 10px 5px 0px rgba(0, 0, 0, 0.47);
 }
 
-main .projects .project1 button,
-main .projects .project3 button {
-  margin-right: 10px;
-}
-
-main .projects .project2 button {
+main .projects .githubButton {
   margin-left: 10px;
 }
 
@@ -748,7 +748,7 @@ main .contact .contactList li {
 
 main .contact .contactList i {
   color: #0D0D0D;
-  font-size: 4.0rem;
+  font-size: 4rem;
 }
 
 main .contact .contactList i:hover {
